--- a/README.org
+++ b/README.org
@@ -1,1 +1,7 @@
 再利用できそうな図をここに置きます．
+gitのsubmoduleとして利用してください．
+
+```bash
+git submodule add git@github.com:ychubachi/figures.git
+git submodule update
+```
